src/cobol_intel/parsers/antlr_gen/COBOLParser.py
# Generated from COBOL.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class COBOLParser ( Parser ):

    grammarFileName = "COBOL.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'IDENTIFICATION'", "'DIVISION'", "'PROGRAM-ID'", 
                     "'ENVIRONMENT'", "'DATA'", "'INPUT-OUTPUT'", "'FILE-CONTROL'", 
                     "'WORKING-STORAGE'", "'SECTION'", "'FILE'", "'LINKAGE'", 
                     "'PROCEDURE'", "'COPY'", "'SELECT'", "'ASSIGN'", "'REPLACING'", 
                     "'PIC'", "'PICTURE'", "'VALUE'", "'OCCURS'", "'TIMES'", 
                     "'REDEFINES'", "'FD'", "'SD'", "'COMP-3'", "'COMP-5'", 
                     "'COMP'", "'BINARY'", "'PACKED-DECIMAL'", "'DISPLAY'", 
                     "'MOVE'", "'TO'", "'COMPUTE'", "'ADD'", "'SUBTRACT'", 
                     "'FROM'", "'MULTIPLY'", "'GIVING'", "'PERFORM'", "'VARYING'", 
                     "'BY'", "'UNTIL'", "'END-PERFORM'", "'CALL'", "'USING'", 
                     "'OPEN'", "'INPUT'", "'OUTPUT'", "'I-O'", "'EXTEND'", 
                     "'CLOSE'", "'READ'", "'WRITE'", "'REWRITE'", "'AT'", 
                     "'END'", "'EXEC'", "'SQL'", "'END-EXEC'", "'IF'", "'ELSE'", 
                     "'END-IF'", "'EVALUATE'", "'WHEN'", "'OTHER'", "'END-EVALUATE'", 
                     "'TRUE'", "'STRING'", "'UNSTRING'", "'INSPECT'", "'TALLYING'", 
                     "'FOR'", "'ALL'", "'DELIMITED'", "'SIZE'", "'INTO'", 
                     "'STOP'", "'RUN'", "'GOBACK'", "'AND'", "'OR'", "'NOT'", 
                     "'SPACE'", "'SPACES'", "'ZERO'", "'ZEROS'", "'ZEROES'", 
                     "'HIGH-VALUE'", "'HIGH-VALUES'", "'LOW-VALUE'", "'LOW-VALUES'", 
                     "'88'", "'>='", "'<='", "'>'", "'<'", "'='", "'+'", 
                     "'-'", "'*'", "'/'", "'('", "')'", "','", "':'", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'.'" ]

    symbolicNames = [ "<INVALID>", "IDENTIFICATION", "DIVISION", "PROGRAM_ID", 
                      "ENVIRONMENT", "DATA", "INPUT_OUTPUT", "FILE_CONTROL", 
                      "WORKING_STORAGE", "SECTION", "FILE", "LINKAGE", "PROCEDURE", 
                      "COPY", "SELECT", "ASSIGN", "REPLACING", "PIC", "PICTURE", 
                      "VALUE", "OCCURS", "TIMES", "REDEFINES", "FD", "SD", 
                      "COMP_3", "COMP_5", "COMP", "BINARY", "PACKED_DECIMAL", 
                      "DISPLAY", "MOVE", "TO", "COMPUTE", "ADD", "SUBTRACT", 
                      "FROM", "MULTIPLY", "GIVING", "PERFORM", "VARYING", 
                      "BY", "UNTIL", "END_PERFORM", "CALL", "USING", "OPEN", 
                      "INPUT", "OUTPUT", "I_O", "EXTEND", "CLOSE", "READ", 
                      "WRITE", "REWRITE", "AT", "END", "EXEC", "SQL", "END_EXEC", 
                      "IF", "ELSE", "END_IF", "EVALUATE", "WHEN", "OTHER", 
                      "END_EVALUATE", "TRUE_KW", "STRING_KW", "UNSTRING", 
                      "INSPECT", "TALLYING", "FOR", "ALL", "DELIMITED", 
                      "SIZE", "INTO", "STOP", "RUN", "GOBACK", "AND", "OR", 
                      "NOT", "SPACE_KW", "SPACES", "ZERO", "ZEROS", "ZEROES", 
                      "HIGH_VALUE", "HIGH_VALUES", "LOW_VALUE", "LOW_VALUES", 
                      "LEVEL_88", "GTE", "LTE", "GT", "LT", "EQ", "PLUS", 
                      "MINUS", "STAR", "SLASH", "LPAREN", "RPAREN", "COMMA", 
                      "COLON", "DECIMAL", "NUMBER", "PSEUDO_TEXT", "NAME", 
                      "SQL_IDENT", "STRING_LIT", "DOT", "WS" ]

    RULE_program = 0
    RULE_identificationDivision = 1
    RULE_environmentDivision = 2
    RULE_inputOutputSection = 3
    RULE_fileControlParagraph = 4
    RULE_selectEntry = 5
    RULE_dataDivision = 6
    RULE_dataSection = 7
    RULE_fileEntry = 8
    RULE_fileDescription = 9
    RULE_dataEntry = 10
    RULE_copyEntry = 11
    RULE_replacingClause = 12
    RULE_replacePair = 13
    RULE_copyReplaceToken = 14
    RULE_conditionEntry = 15
    RULE_dataItem = 16
    RULE_dataClause = 17
    RULE_picClause = 18
    RULE_usageClause = 19
    RULE_valueClause = 20
    RULE_occursClause = 21
    RULE_redefinesClause = 22
    RULE_procedureDivision = 23
    RULE_procedureUsing = 24
    RULE_paragraph = 25
    RULE_sentence = 26
    RULE_statement = 27
    RULE_displayStmt = 28
    RULE_moveStmt = 29
    RULE_computeStmt = 30
    RULE_addStmt = 31
    RULE_subtractStmt = 32
    RULE_multiplyStmt = 33
    RULE_performInlineStmt = 34
    RULE_performSimpleStmt = 35
    RULE_callStmt = 36
    RULE_openStmt = 37
    RULE_openPhrase = 38
    RULE_openMode = 39
    RULE_closeStmt = 40
    RULE_readStmt = 41
    RULE_atEndClause = 42
    RULE_writeStmt = 43
    RULE_rewriteStmt = 44
    RULE_execSqlStmt = 45
    RULE_ifStmt = 46
    RULE_elseClause = 47
    RULE_evaluateStmt = 48
    RULE_evalSubject = 49
    RULE_whenClause = 50
    RULE_whenMatch = 51
    RULE_stringStmt = 52
    RULE_unstringStmt = 53
    RULE_inspectStmt = 54
    RULE_inspectClause = 55
    RULE_inspectTallyingClause = 56
    RULE_inspectReplacingClause = 57
    RULE_delimTarget = 58
    RULE_stopStmt = 59
    RULE_gobackStmt = 60
    RULE_condition = 61
    RULE_simpleCondition = 62
    RULE_compOp = 63
    RULE_expression = 64
    RULE_term = 65
    RULE_factor = 66
    RULE_operand = 67
    RULE_nameRef = 68
    RULE_literal = 69
    RULE_figConst = 70
    RULE_sqlAtom = 71

    ruleNames =  [ "program", "identificationDivision", "environmentDivision", 
                   "inputOutputSection", "fileControlParagraph", "selectEntry", 
                   "dataDivision", "dataSection", "fileEntry", "fileDescription", 
                   "dataEntry", "copyEntry", "replacingClause", "replacePair", 
                   "copyReplaceToken", "conditionEntry", "dataItem", "dataClause", 
                   "picClause", "usageClause", "valueClause", "occursClause", 
                   "redefinesClause", "procedureDivision", "procedureUsing", 
                   "paragraph", "sentence", "statement", "displayStmt", 
                   "moveStmt", "computeStmt", "addStmt", "subtractStmt", 
                   "multiplyStmt", "performInlineStmt", "performSimpleStmt", 
                   "callStmt", "openStmt", "openPhrase", "openMode", "closeStmt", 
                   "readStmt", "atEndClause", "writeStmt", "rewriteStmt", 
                   "execSqlStmt", "ifStmt", "elseClause", "evaluateStmt", 
                   "evalSubject", "whenClause", "whenMatch", "stringStmt", 
                   "unstringStmt", "inspectStmt", "inspectClause", "inspectTallyingClause", 
                   "inspectReplacingClause", "delimTarget", "stopStmt", 
                   "gobackStmt", "condition", "simpleCondition", "compOp", 
                   "expression", "term", "factor", "operand", "nameRef", 
                   "literal", "figConst", "sqlAtom" ]

    EOF = Token.EOF
    IDENTIFICATION=1
    DIVISION=2
    PROGRAM_ID=3
    ENVIRONMENT=4
    DATA=5
    INPUT_OUTPUT=6
    FILE_CONTROL=7
    WORKING_STORAGE=8
    SECTION=9
    FILE=10
    LINKAGE=11
    PROCEDURE=12
    COPY=13
    SELECT=14
    ASSIGN=15
    REPLACING=16
    PIC=17
    PICTURE=18
    VALUE=19
    OCCURS=20
    TIMES=21
    REDEFINES=22
    FD=23
    SD=24
    COMP_3=25
    COMP_5=26
    COMP=27
    BINARY=28
    PACKED_DECIMAL=29
    DISPLAY=30
    MOVE=31
    TO=32
    COMPUTE=33
    ADD=34
    SUBTRACT=35
    FROM=36
    MULTIPLY=37
    GIVING=38
    PERFORM=39
    VARYING=40
    BY=41
    UNTIL=42
    END_PERFORM=43
    CALL=44
    USING=45
    OPEN=46
    INPUT=47
    OUTPUT=48
    I_O=49
    EXTEND=50
    CLOSE=51
    READ=52
    WRITE=53
    REWRITE=54
    AT=55
    END=56
    EXEC=57
    SQL=58
    END_EXEC=59
    IF=60
    ELSE=61
    END_IF=62
    EVALUATE=63
    WHEN=64
    OTHER=65
    END_EVALUATE=66
    TRUE_KW=67
    STRING_KW=68
    UNSTRING=69
    INSPECT=70
    TALLYING=71
    FOR=72
    ALL=73
    DELIMITED=74
    SIZE=75
    INTO=76
    STOP=77
    RUN=78
    GOBACK=79
    AND=80
    OR=81
    NOT=82
    SPACE_KW=83
    SPACES=84
    ZERO=85
    ZEROS=86
    ZEROES=87
    HIGH_VALUE=88
    HIGH_VALUES=89
    LOW_VALUE=90
    LOW_VALUES=91
    LEVEL_88=92
    GTE=93
    LTE=94
    GT=95
    LT=96
    EQ=97
    PLUS=98
    MINUS=99
    STAR=100
    SLASH=101
    LPAREN=102
    RPAREN=103
    COMMA=104
    COLON=105
    DECIMAL=106
    NUMBER=107
    PSEUDO_TEXT=108
    NAME=109
    SQL_IDENT=110
    STRING_LIT=111
    DOT=112
    WS=113

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def identificationDivision(self):
            return self.getTypedRuleContext(COBOLParser.IdentificationDivisionContext,0)


        def EOF(self):
            return self.getToken(COBOLParser.EOF, 0)

        def environmentDivision(self):
            return self.getTypedRuleContext(COBOLParser.EnvironmentDivisionContext,0)


        def dataDivision(self):
            return self.getTypedRuleContext(COBOLParser.DataDivisionContext,0)


        def procedureDivision(self):
            return self.getTypedRuleContext(COBOLParser.ProcedureDivisionContext,0)


        def getRuleIndex(self):
            return COBOLParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = COBOLParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 144
            self.identificationDivision()
            self.state = 146
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==4:
                self.state = 145
                self.environmentDivision()


            self.state = 149
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==5:
                self.state = 148
                self.dataDivision()


            self.state = 152
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==12:
                self.state = 151
                self.procedureDivision()


            self.state = 154
            self.match(COBOLParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IdentificationDivisionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFICATION(self):
            return self.getToken(COBOLParser.IDENTIFICATION, 0)

        def DIVISION(self):
            return self.getToken(COBOLParser.DIVISION, 0)

        def DOT(self, i:int=None):
            if i is None:
                return self.getTokens(COBOLParser.DOT)
            else:
                return self.getToken(COBOLParser.DOT, i)

        def PROGRAM_ID(self):
            return self.getToken(COBOLParser.PROGRAM_ID, 0)

        def NAME(self):
            return self.getToken(COBOLParser.NAME, 0)

        def getRuleIndex(self):
            return COBOLParser.RULE_identificationDivision

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIdentificationDivision" ):
                listener.enterIdentificationDivision(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIdentificationDivision" ):
                listener.exitIdentificationDivision(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIdentificationDivision" ):
                return visitor.visitIdentificationDivision(self)
            else:
                return visitor.visitChildren(self)




    def identificationDivision(self):

        localctx = COBOLParser.IdentificationDivisionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_identificationDivision)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 156
            self.match(COBOLParser.IDENTIFICATION)
            self.state = 157
            self.match(COBOLParser.DIVISION)
            self.state = 158
            self.match(COBOLParser.DOT)
            self.state = 159
            self.match(COBOLParser.PROGRAM_ID)
            self.state = 160
            self.match(COBOLParser.DOT)
            self.state = 161
            self.match(COBOLParser.NAME)
            self.state = 162
            self.match(COBOLParser.DOT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EnvironmentDivisionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ENVIRONMENT(self):
            return self.getToken(COBOLParser.ENVIRONMENT, 0)

        def DIVISION(self):
            return self.getToken(COBOLParser.DIVISION, 0)

        def DOT(self):
            return self.getToken(COBOLParser.DOT, 0)

        def inputOutputSection(self):
            return self.getTypedRuleContext(COBOLParser.InputOutputSectionContext,0)


        def getRuleIndex(self):
            return COBOLParser.RULE_environmentDivision

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEnvironmentDivision" ):
                listener.enterEnvironmentDivision(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEnvironmentDivision" ):
                listener.exitEnvironmentDivision(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEnvironmentDivision" ):
                return visitor.visitEnvironmentDivision(self)
            else:
                return visitor.visitChildren(self)




    def environmentDivision(self):

        localctx = COBOLParser.EnvironmentDivisionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_environmentDivision)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 164
            self.match(COBOLParser.ENVIRONMENT)
            self.state = 165
            self.match(COBOLParser.DIVISION)
            self.state = 166
            self.match(COBOLParser.DOT)
            self.state = 168
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==6:
                self.state = 167
                self.inputOutputSection()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InputOutputSectionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INPUT_OUTPUT(self):
            return self.getToken(COBOLParser.INPUT_OUTPUT, 0)

        def SECTION(self):
            return self.getToken(COBOLParser.SECTION, 0)

        def DOT(self):
            return self.getToken(COBOLParser.DOT, 0)

        def fileControlParagraph(self):
            return self.getTypedRuleContext(COBOLParser.FileControlParagraphContext,0)


        def getRuleIndex(self):
            return COBOLParser.RULE_inputOutputSection

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInputOutputSection" ):
                listener.enterInputOutputSection(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInputOutputSection" ):
                listener.exitInputOutputSection(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInputOutputSection" ):
                return visitor.visitInputOutputSection(self)
            else:
                return visitor.visitChildren(self)




    def inputOutputSection(self):

        localctx = COBOLParser.InputOutputSectionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_inputOutputSection)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 170
            self.match(COBOLParser.INPUT_OUTPUT)
            self.state = 171
            self.match(COBOLParser.SECTION)
            self.state = 172
            self.match(COBOLParser.DOT)
            self.state = 174
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==7:
                self.state = 173
                self.fileControlParagraph()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FileControlParagraphContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FILE_CONTROL(self):
            return self.getToken(COBOLParser.FILE_CONTROL, 0)

        def DOT(self):
            return self.getToken(COBOLParser.DOT, 0)

        def selectEntry(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(COBOLParser.SelectEntryContext)
            else:
                return self.getTypedRuleContext(COBOLParser.SelectEntryContext,i)


        def getRuleIndex(self):
            return COBOLParser.RULE_fileControlParagraph

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFileControlParagraph" ):
                listener.enterFileControlParagraph(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFileControlParagraph" ):
                listener.exitFileControlParagraph(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFileControlParagraph" ):
                return visitor.visitFileControlParagraph(self)
            else:
                return visitor.visitChildren(self)




    def fileControlParagraph(self):

        localctx = COBOLParser.FileControlParagraphContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_fileControlParagraph)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 176
            self.match(COBOLParser.FILE_CONTROL)
            self.state = 177
            self.match(COBOLParser.DOT)
            self.state = 181
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==14:
                self.state = 178
                self.selectEntry()
                self.state = 183
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SelectEntryContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SELECT(self):
            return self.getToken(COBOLParser.SELECT, 0)

        def NAME(self, i:int=None):
            if i is None:
                return self.getTokens(COBOLParser.NAME)
            else:
                return self.getToken(COBOLParser.NAME, i)

        def ASSIGN(self):
            return self.getToken(COBOLParser.ASSIGN, 0)

        def TO(self):
            return self.getToken(COBOLParser.TO, 0)

        def DOT(self):
            return self.getToken(COBOLParser.DOT, 0)

        def STRING_LIT(self):
            return self.getToken(COBOLParser.STRING_LIT, 0)

        def getRuleIndex(self):
            return COBOLParser.RULE_selectEntry

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSelectEntry" ):
                listener.enterSelectEntry(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSelectEntry" ):
                listener.exitSelectEntry(self)
